--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
+            min-height: 100vh;
             background-color: #f8f9fa;
             display: flex;
             justify-content: center;
@@ -61,6 +62,50 @@
         .logo .logoYellowd { color: #FBBC05; } /* Yellow */
         .logo .logoBlue { color: #4285F4; } /* Blue */
         .logo .logoGreen { color: #34A853; } /* Green */
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            font-size: 14px;
+            background-color: #f8f9fa;
+            padding: 14px 0px 0px;
+            color: #666;
+            border-top: 1px solid #ddd;
+        }
+        .footer a {
+            text-decoration: none;
+            color: #666;
+        }
+        .footer a:hover {
+            color: #333;
+        }
+
+        .result-container {
+            margin-top: 20px;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .result-container h3 {
+            margin-bottom: 10px;
+            color: #007bff;
+        }
+
+        .result-container .result-text {
+            font-size: 1.2rem;
+            color: #333;
+            margin-bottom: 15px;
+        }
+
+        .result-container .btn {
+            margin-top: 10px;
+        }
+
     </style>
 </head>
 <body>
@@ -82,16 +127,38 @@
                 <div class="progress">
                     <div class="progress-bar" id="progressBar"></div>
                 </div>
-                <div class="progress-text" id="progressText">0%</div>
+                <div class="progress-text" id="progressText"></div>
+                <div class="progress-text" id="progressStatus" style="display: none;">Generating text...</div>
             </div>
-            <button type="submit" class="btn btn-primary">sound to text</button>
+            <div class="button-group">
+                <button type="submit" name="action" value="bottonSoundToText" class="btn btn-primary">Sound to text</button>
+                <button type="submit" name="action" value="bottonRegenerate" class="btn btn-primary">Regenerate</button>
+            </div>
         </form>
+        <div id="resultContainer" class="result-container" style="display: block;">
+            <h3>result</h3>
+            <p id="resultText" class="result-text"></p>
+            <button class="btn btn-primary" onclick="copyText()">Copy text</button>
+        </div>
+        
     </div>
+    
+    <div class="footer">
+        <p>
+            <a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2024101342号</a>
+            |
+            <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010102012345" target="_blank">
+                京公网安备 11010102012345号
+            </a>
+        </p>
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         const uploadForm = document.getElementById('uploadForm');
         const progressBar = document.getElementById('progressBar');
         const progressText = document.getElementById('progressText');
+        const progressStatus = document.getElementById('progressStatus');
         const progressContainer = document.getElementById('progressContainer');
 
         // Show progress container when upload starts
@@ -99,24 +166,97 @@
             event.preventDefault();  // Prevent form from submitting normally
 
             const formData = new FormData(uploadForm);
-            const xhr = new XMLHttpRequest();
-            
-            xhr.open('POST', '/uploadFile', true);
 
+            // 获取触发提交的按钮
+            const actionButton = document.activeElement; // 当前激活的按钮
+            if (actionButton && actionButton.name === 'action') {
+                formData.append(actionButton.name, actionButton.value);
+                if(actionButton.value === 'bottonSoundToText')
+                {
+                    progressBar.style.width = 0 + '%';
+                    progressText.textContent = 'upload progress: 0%';
+                }
+            }
+            
             // Show progress container when uploading starts
             progressContainer.style.display = 'block';
-
+            progressStatus.style.display = 'none';
             // Upload complete callback
-            xhr.onload = function() {
-                if (xhr.status === 200) {
-                    console.log('Upload successful');
-                    // You can display a success message here or trigger other actions
-                } else {
-                    console.log('Upload failed');
+            // Use XHR 
+            // const xhr = new XMLHttpRequest();
+            // xhr.open('POST', '/uploadFile', true);
+            // xhr.onload = function() {
+            //     if (xhr.status === 200) {
+            //         console.log('Upload successful');
+            //         // You can display a success message here or trigger other actions
+            //     } else {
+            //         console.log('Upload failed');
+            //     }
+            // };
+            // // Send the form data (with file)
+            // xhr.send(formData);
+
+            // Use Fetch
+            fetch('/uploadFile', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
                 }
-            };
-            // Send the form data (with file)
-            xhr.send(formData);
+                return response.json(); // 将返回值解析为 JSON
+            })
+            .then(data => {
+                console.log('Response from server:', data);
+                // 访问后端返回的字段
+                const code = data.code;
+                const action = data.action;
+                const message = data.message;
+                const filename = data.filename;
+                console.log(`code: ${code}, message: ${message}, action: ${action}`);
+                if (code == 'S') {
+                    setTimeout(function() {
+                        progressText.style.display = 'none';
+                        progressStatus.style.display = 'block';
+                        progressStatus.textContent = 'Generating text...';
+                    }, 2500);
+                    // 这里调用报404，不知道为什么
+                    fetch('/soundToText', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        // body: JSON.stringify({ 
+                        //     filename: filename 
+                        // }) // 如果需要传参
+                        body: data
+                    })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! Status: ${response.status}`);
+                        }
+                        return response.json(); // 将返回值解析为 JSON
+                    })
+                    .then(data => {
+                        console.log('Response from server:', data);
+                        // 访问后端返回的字段
+                        const code = data.code;
+                        const action = data.action;
+                        const message = data.message;
+
+                        if (code == 'S') {
+                            
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                    });
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
         });
 
         // SSE: Update progress bar with server-side progress
@@ -124,8 +264,29 @@
         progressSource.onmessage = function(event) {
             const progress = JSON.parse(event.data);
             progressBar.style.width = progress.percentage + '%';
-            progressText.textContent = progress.percentage + '%';
+            progressText.textContent = 'upload progress: '+progress.percentage + '%';
         };
+
+        // Function to handle the response from the server
+        function showResult(result) {
+            const resultContainer = document.getElementById('resultContainer');
+            const resultText = document.getElementById('resultText');
+            
+            // Display the result container
+            resultContainer.style.display = 'block';
+            
+            // Update the result text
+            resultText.textContent = result;
+        }
+
+        // Function to copy result text to clipboard
+        function copyText() {
+            const resultText = document.getElementById('resultText').textContent;
+            navigator.clipboard.writeText(resultText).then(() => {
+                alert('text copied to clipboard');
+            });
+        }
+
     </script>
 </body>
 </html>
