--- a/templates/index.html
+++ b/templates/index.html
@@ -58,10 +58,10 @@
             display: inline;
             margin: 0 0.2em; /* Keep space between words */
         }
-        .logo .logoRed { color: #EA4335; } /* Red */
-        .logo .logoYellowd { color: #FBBC05; } /* Yellow */
-        .logo .logoBlue { color: #4285F4; } /* Blue */
-        .logo .logoGreen { color: #34A853; } /* Green */
+        .logo .logo_red { color: #EA4335; } /* Red */
+        .logo .logo_yellowd { color: #FBBC05; } /* Yellow */
+        .logo .logo_blue { color: #4285F4; } /* Blue */
+        .logo .logo_green { color: #34A853; } /* Green */
         .footer {
             position: fixed;
             bottom: 0;
@@ -111,33 +111,33 @@
 <body>
     <div class="container">
         <div class="logo">
-            <span class="logoRed">S</span>
-            <span class="logoYellowd">t</span>
-            <span class="logoBlue">a</span>
-            <span class="logoGreen">n</span>
-            <span class="logoRed">d</span>
-            <span class="logoYellowd">A</span>
-            <span class="logoBlue">I</span>
+            <span class="logo_red">S</span>
+            <span class="logo_yellowd">t</span>
+            <span class="logo_blue">a</span>
+            <span class="logo_green">n</span>
+            <span class="logo_red">d</span>
+            <span class="logo_yellowd">A</span>
+            <span class="logo_blue">I</span>
         </div>
-        <form id="uploadForm" action="/uploadFile" method="POST" enctype="multipart/form-data">
+        <form id="upload_form" action="/upload-file" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <input class="form-control" type="file" name="audio_file" accept="audio/wav, audio/mp3, audio/mp4, audio/m4a, audio/wma, audio/aac, audio/ogg, audio/amr, audio/flac, video/mp4, video/ogg" required>
             </div>
-            <div class="progress-container" id="progressContainer">
+            <div class="progress-container" id="progress_container">
                 <div class="progress">
-                    <div class="progress-bar" id="progressBar"></div>
+                    <div class="progress-bar" id="progress_bar"></div>
                 </div>
-                <div class="progress-text" id="progressText"></div>
-                <div class="progress-text" id="progressStatus" style="display: none;">Generating text...</div>
+                <div class="progress-text" id="progress_text"></div>
+                <div class="progress-text" id="progress_status" style="display: none;">Generating text...</div>
             </div>
             <div class="button-group">
-                <button type="submit" name="action" value="bottonSoundToText" class="btn btn-primary">Sound to text</button>
-                <button type="submit" name="action" value="bottonRegenerate" class="btn btn-primary">Regenerate</button>
+                <button type="submit" name="action" value="botton_sound_to_text" class="btn btn-primary">Sound to text</button>
+                <button type="submit" name="action" value="botton_regenerate" style="display: none;" class="btn btn-primary">Regenerate</button>
             </div>
         </form>
-        <div id="resultContainer" class="result-container" style="display: block;">
+        <div id="result_container" class="result-container" style="display: none;">
             <h3>result</h3>
-            <p id="resultText" class="result-text"></p>
+            <p id="result_text" class="result-text"></p>
             <button class="btn btn-primary" onclick="copyText()">Copy text</button>
         </div>
         
@@ -155,32 +155,37 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const uploadForm = document.getElementById('uploadForm');
-        const progressBar = document.getElementById('progressBar');
-        const progressText = document.getElementById('progressText');
-        const progressStatus = document.getElementById('progressStatus');
-        const progressContainer = document.getElementById('progressContainer');
+        const uploadForm = document.getElementById('upload_form');
+        const progressBar = document.getElementById('progress_bar');
+        const progressText = document.getElementById('progress_text');
+        const progressStatus = document.getElementById('progress_status');
+        const progressContainer = document.getElementById('progress_container');
 
+        const resultContainer = document.getElementById('result_container');
+        const resultText = document.getElementById('result_text');
         // Show progress container when upload starts
         uploadForm.addEventListener('submit', function(event) {
             event.preventDefault();  // Prevent form from submitting normally
 
-            const formData = new FormData(uploadForm);
+            const formData = new FormData(upload_form);
 
             // 获取触发提交的按钮
             const actionButton = document.activeElement; // 当前激活的按钮
             if (actionButton && actionButton.name === 'action') {
                 formData.append(actionButton.name, actionButton.value);
-                if(actionButton.value === 'bottonSoundToText')
+                if(actionButton.value === 'botton_sound_to_text')
                 {
                     progressBar.style.width = 0 + '%';
-                    progressText.textContent = 'upload progress: 0%';
+                    progressText.textContent = 'Upload progress: 0%';
                 }
             }
             
             // Show progress container when uploading starts
             progressContainer.style.display = 'block';
+            progressText.style.display = 'block';
+            progressText.textContent = '';
             progressStatus.style.display = 'none';
+            resultContainer.style.display = 'none';
             // Upload complete callback
             // Use XHR 
             // const xhr = new XMLHttpRequest();
@@ -197,7 +202,7 @@
             // xhr.send(formData);
 
             // Use Fetch
-            fetch('/uploadFile', {
+            fetch('/upload-file', {
                 method: 'POST',
                 body: formData
             })
@@ -208,29 +213,26 @@
                 return response.json(); // 将返回值解析为 JSON
             })
             .then(data => {
-                console.log('Response from server:', data);
+                console.log('Response from /uploadFile:', data);
                 // 访问后端返回的字段
                 const code = data.code;
                 const action = data.action;
                 const message = data.message;
                 const filename = data.filename;
-                console.log(`code: ${code}, message: ${message}, action: ${action}`);
                 if (code == 'S') {
                     setTimeout(function() {
                         progressText.style.display = 'none';
                         progressStatus.style.display = 'block';
                         progressStatus.textContent = 'Generating text...';
                     }, 2500);
-                    // 这里调用报404，不知道为什么
-                    fetch('/soundToText', {
+                    fetch('/sound-to-text', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
                         },
-                        // body: JSON.stringify({ 
-                        //     filename: filename 
-                        // }) // 如果需要传参
-                        body: data
+                        body: JSON.stringify({ 
+                            filename: filename 
+                        }) // 如果需要传参
                     })
                     .then(response => {
                         if (!response.ok) {
@@ -239,15 +241,12 @@
                         return response.json(); // 将返回值解析为 JSON
                     })
                     .then(data => {
-                        console.log('Response from server:', data);
+                        console.log('Response from /soundToText:', data);
                         // 访问后端返回的字段
                         const code = data.code;
-                        const action = data.action;
                         const message = data.message;
-
-                        if (code == 'S') {
-                            
-                        }
+                        const payload = data.payload;
+                        showResult(payload)
                     })
                     .catch(error => {
                         console.error('Error:', error);
@@ -264,26 +263,27 @@
         progressSource.onmessage = function(event) {
             const progress = JSON.parse(event.data);
             progressBar.style.width = progress.percentage + '%';
-            progressText.textContent = 'upload progress: '+progress.percentage + '%';
+            progressText.textContent = 'Upload progress: '+progress.percentage + '%';
         };
 
         // Function to handle the response from the server
-        function showResult(result) {
-            const resultContainer = document.getElementById('resultContainer');
-            const resultText = document.getElementById('resultText');
+        function showResult(content) {
+            const resultContainer = document.getElementById('result_container');
+            const resultText = document.getElementById('result_text');
             
             // Display the result container
             resultContainer.style.display = 'block';
             
             // Update the result text
-            resultText.textContent = result;
+            resultText.textContent = content;
+            progressStatus.textContent = 'Done';
         }
 
         // Function to copy result text to clipboard
         function copyText() {
-            const resultText = document.getElementById('resultText').textContent;
+            const resultText = document.getElementById('result_text').textContent;
             navigator.clipboard.writeText(resultText).then(() => {
-                alert('text copied to clipboard');
+                alert('Text copied to clipboard');
             });
         }
 
