修改进度条隐藏后无法再显示的bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -243,6 +243,7 @@
             
             // Show progress container when uploading starts
             progressContainer.style.display = 'block';
+            progressBarContainer.style.display = 'block';
             progressText.style.display = 'block';
             progressText.textContent = '';
             progressStatus.style.display = 'none';
