--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
     <meta property="og:url" content="https://standai.tech">
 
     <!-- Favicon 图标 -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../static/ico/favicon.ico" type="image/x-icon">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             min-height: 100vh;
@@ -188,7 +188,7 @@
         </p>
     </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/js/bootstrap.bundle.min.js"></script>
     <script>
         const audioFile = document.getElementById('audio_file');
         const fileOversize = document.getElementById('file_oversize');
