添加sitemap和备案图标

--- a/templates/index.html
+++ b/templates/index.html
@@ -181,11 +181,16 @@
     
     <div class="footer">
         <p>
-            <a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2024101342号</a>
-            <!-- | -->
-            <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010102012345" target="_blank">
-                <!-- 京公网安备 号 -->
-            </a>
+            <img alt="" src="../static/ico/foot-icp.png"
+                 style="margin-right:5px;">
+            <a onclick="jumpGabPre('您即将离开，后续服务将由ICP/IP地址/域名信息备案管理系统（https://beian.miit.gov.cn）提供。',
+            'https://beian.miit.gov.cn/#/Integrated/index')">京ICP备2024101342号-1</a>
+            
+            <span style="margin-left: 20px;">
+            <img alt="" src="../static/ico/foot-ga.png"
+                style="margin-right:5px;">
+            <a onclick="jumpGabPre('您即将离开，后续服务将由全国互联网安全管理服务平台（https://beian.mps.gov.cn）提供。',
+            'https://beian.mps.gov.cn/#/query/webSearch?code=11010502056564')">京公网安备11010502056564号</a></span>
         </p>
     </div>
     <script src="../static/js/bootstrap.bundle.min.js"></script>
